    upgrading to 8.1:
    - bgwriter_percent -> bgwriter_{lru,all}_percent
    - bgwriter_maxpages -> bgwriter_{lru,all}_maxpages
  * PgCommon.pm: Add new function set_cluster_start_conf() for easier change
    of start.conf.
  * Rename test 030_create_errors.t to 030_errors.t since it covers more
    errors than just creation failures.

 -- Martin Pitt <mpitt@debian.org>  Tue, 22 Nov 2005 23:56:09 +0100

postgresql-common (34) unstable; urgency=low

  * debian/postgresql-common.postrm: Fix syntax error.
  * Add debian/supported-versions: Script to determine the set of supported
    PostgreSQL major versions for the running distro/release. Currently covers
    Debian sid/testing, Ubuntu 5.10 and Ubuntu 6.04.
  * debian/postgresql-common.config: Remove hardcoded versions, use
    supported-versions now.
  * Minor test suite variable cleanup.
  * debian/README.Debian: Update for version 8.1.

 -- Martin Pitt <mpitt@debian.org>  Tue, 22 Nov 2005 01:17:32 +0100

postgresql-common (33) unstable; urgency=low

  * pg_wrapper: Instead of checking $0 against a static list, just check
    whether the program is available in postgresql's bin dir. This allows
    other packages which provide stuff in pg_bin to install additional
    symlinks and get pg_wrapper support for free.
  * pg_checksystem, pg_createcluster, pg_dropcluster, pg_upgradecluster: Check
    that effective user is root before doing anything to avoid confusing error
    messages.
  * pg_ctlcluster: Enhance the check if cluster is up and running to make it
    more reliable. This should fix the 'Database system is starting up' errors
    on autovacuum startup.
  * debian/init.d-functions: Remove legacy init script output and always use
    LSB functions. Add lsb-base dependency.
  * debian/po/de.po: Fix cluster version in German translation.
    Closes: #340096
  * debian/postgresql-common.postrm: Check if /etc/postgresql-common exists
    before trying to remove it. Closes: #340187
  * pg_upgradecluster: